--- a/.editorconfig
+++ b/.editorconfig
@@ -1,13 +1,57 @@
-[*.cs]
-# Formatting
+root = true
+
+# All files
+[*]
 indent_style = space
-indent_size = 4
 charset = utf-8
+
+# Code files
+[*.{cs,csx,vb,vbx}]
+indent_size = 4
 trim_trailing_whitespace = true
 insert_final_newline = true
 
+# XML project files
+[*.{csproj,vbproj,vcxproj,vcxproj.filters,proj,projitems,shproj}]
+indent_size = 2
+trim_trailing_whitespace = true
+insert_final_newline = true
+
+# XML config files
+[*.{props,targets,ruleset,config,nuspec,resx,vsixmanifest,vsct}]
+indent_size = 2
+trim_trailing_whitespace = true
+insert_final_newline = true
+
+# JSON files
+[*.json]
+indent_size = 2
+trim_trailing_whitespace = true
+insert_final_newline = true
+
+# Markdown files
+[*.md]
+indent_size = 2
+trim_trailing_whitespace = false
+insert_final_newline = true
+
+# Powershell files
+[*.ps1]
+indent_size = 2
+trim_trailing_whitespace = true
+insert_final_newline = true
+
+# Shell script files
+[*.sh]
+end_of_line = lf
+indent_size = 2
+trim_trailing_whitespace = true
+insert_final_newline = true
+
+
 # Formatting conventions
 # More information: https://docs.microsoft.com/en-us/visualstudio/ide/editorconfig-code-style-settings-reference?view=vs-2019
+[*.cs]
 
 # "This." and "Me." qualifiers
 dotnet_style_qualification_for_field = true:warning
@@ -38,8 +82,8 @@ dotnet_style_prefer_inferred_tuple_names = true:warning
 dotnet_style_prefer_inferred_anonymous_type_member_names = true:suggestion
 dotnet_style_prefer_auto_properties = true:warning
 dotnet_style_prefer_is_null_check_over_reference_equality_method = true:warning
-dotnet_style_prefer_conditional_expression_over_assignment = true:warning
-dotnet_style_prefer_conditional_expression_over_return = true:warning
+dotnet_style_prefer_conditional_expression_over_assignment = true:suggestion
+dotnet_style_prefer_conditional_expression_over_return = true:suggestion
 
 # Null-checking preferences
 dotnet_style_coalesce_expression = true:warning
@@ -164,7 +208,7 @@ dotnet_naming_symbols.locals.applicable_kinds = local
 #   Async methods (suffix + pascal)
 dotnet_naming_rule.async_methods_require_suffix.symbols = async_methods
 dotnet_naming_rule.async_methods_require_suffix.style = async_suffix
-dotnet_naming_rule.async_methods_require_suffix.severity = error
+dotnet_naming_rule.async_methods_require_suffix.severity = warning
 dotnet_naming_symbols.async_methods.kinds = method
 dotnet_naming_symbols.async_methods.required_modifiers = async
 dotnet_naming_style.async_suffix.capitalization = pascal_case
@@ -182,6 +226,86 @@ dotnet_naming_style.upper.capitalization = all_upper
 
 
 # Rule overrides
+# CA1303: Do not pass literals as localized parameters
+dotnet_diagnostic.CA1303.severity = none
+# CA1707: Identifiers should not contain underscores
+dotnet_diagnostic.CA1707.severity = none
+# CS8073: The result of the expression is always the same since a value of this type is never equal to 'null'.
+dotnet_diagnostic.CS8073.severity = warning
+# CS8597: Thrown value may be null.
+dotnet_diagnostic.CS8597.severity = error
+# CS8600: Converting null literal or possible null value to non-nullable type.
+dotnet_diagnostic.CS8600.severity = error
+# CS8601: Possible null reference assignment.
+dotnet_diagnostic.CS8601.severity = error
+# CS8602: Possible dereference of a null reference.
+dotnet_diagnostic.CS8602.severity = error
+# CS8603: Possible null reference return.
+dotnet_diagnostic.CS8603.severity = error
+# CS8604: Possible null reference argument for a parameter.
+dotnet_diagnostic.CS8604.severity = error
+# CS8608: Nullability of reference types in type doesn't match overridden member.
+dotnet_diagnostic.CS8608.severity = error
+# CS8609: Nullability of reference types in return type doesn't match overridden member.
+dotnet_diagnostic.CS8609.severity = error
+# CS8610: Nullability of reference types in type of parameter doesn't match overridden member.
+dotnet_diagnostic.CS8610.severity = error
+# CS8611: Nullability of reference types in type of parameter doesn't match partial method declaration.
+dotnet_diagnostic.CS8611.severity = error
+# CS8612: Nullability of reference types in type doesn't match implicitly implemented member.
+dotnet_diagnostic.CS8612.severity = error
+# CS8613: Nullability of reference types in return type doesn't match implicitly implemented member.
+dotnet_diagnostic.CS8613.severity = error
+# CS8614: Nullability of reference types in type of parameter doesn't match implicitly implemented member.
+dotnet_diagnostic.CS8614.severity = error
+# CS8615: Nullability of reference types in type doesn't match implemented member.
+dotnet_diagnostic.CS8615.severity = error
+# CS8616: Nullability of reference types in return type doesn't match implemented member.
+dotnet_diagnostic.CS8616.severity = error
+# CS8617: Nullability of reference types in type of parameter doesn't match implemented member.
+dotnet_diagnostic.CS8617.severity = error
+# CS8618: Non-nullable field is uninitialized. Consider declaring as nullable.
+dotnet_diagnostic.CS8618.severity = error
+# CS8619: Nullability of reference types in value doesn't match target type.
+dotnet_diagnostic.CS8619.severity = error
+# CS8620: Nullability of reference types in argument doesn't match parameter type.
+dotnet_diagnostic.CS8620.severity = error
+# CS8621: Nullability of reference types in return type doesn't match the target delegate.
+dotnet_diagnostic.CS8621.severity = error
+# CS8622: Nullability of reference types in type of a parameter doesn't match the target delegate.
+dotnet_diagnostic.CS8622.severity = error
+# CS8625: Cannot convert null literal to non-nullable reference or unconstrained type parameter.
+dotnet_diagnostic.CS8625.severity = error
+# CS8629: Nullable value type may be null.
+dotnet_diagnostic.CS8629.severity = error
+# CS8631: The type cannot be used as type parameter in the generic type or method. Nullability of type argument doesn't match constraint type.
+dotnet_diagnostic.CS8631.severity = error
+# CS8632: The annotation for nullable reference types should only be used in code within a '#nullable' annotations context.
+dotnet_diagnostic.CS8632.severity = error
+# CS8633: Nullability in constraints for type parameter doesn't match the constraints for type parameter in implicitly implemented interface method.
+dotnet_diagnostic.CS8633.severity = error
+# CS8634: The type cannot be used as type parameter in the generic type or method. Nullability of type argument doesn't match 'class' constraint.
+dotnet_diagnostic.CS8634.severity = error
+# CS8638: Conditional access may produce a null value for a type parameter.
+dotnet_diagnostic.CS8638.severity = error
+# CS8643: Nullability of reference types in explicit interface specifier doesn't match interface implemented by the type.
+dotnet_diagnostic.CS8643.severity = error
+# CS8644: Type does not implement interface member. Nullability of reference types in interface implemented by the base type doesn't match.
+dotnet_diagnostic.CS8644.severity = error
+# CS8645: Interface is already listed in the interface list with different nullability of reference types.
+dotnet_diagnostic.CS8645.severity = error
+# CS8653: A default expression introduces a null value for a type parameter.
+dotnet_diagnostic.CS8653.severity = error
+# CS8654: A null literal introduces a null value for a type parameter.
+dotnet_diagnostic.CS8654.severity = error
+# CS8655: The switch expression does not handle some null inputs.
+dotnet_diagnostic.CS8655.severity = error
+# CS8667: Partial method declarations have inconsistent nullability in constraints for type parameter.
+dotnet_diagnostic.CS8667.severity = error
+# CS8714: The type cannot be used as type parameter in the generic type or method. Nullability of type argument doesn't match 'notnull' constraint.
+dotnet_diagnostic.CS8714.severity = error
+# IDE0069: Disposable fields should be disposed
+dotnet_diagnostic.IDE0069.severity = warning
 # S1117: Local variables should not shadow class fields
 dotnet_diagnostic.S1117.severity = silent
 # S2342: Enumeration types should comply with a naming convention
@@ -190,20 +314,3 @@ dotnet_diagnostic.S2342.severity = silent
 dotnet_diagnostic.S3966.severity = silent
 # S4136: Method overloads should be grouped together
 dotnet_diagnostic.S4136.severity = silent
-
-
-[*.{csproj,json,yml}]
-# Formatting
-indent_style = space
-indent_size = 2
-charset = utf-8
-trim_trailing_whitespace = true
-insert_final_newline = true
-
-[*.md]
-# Formatting
-indent_style = space
-indent_size = 2
-charset = utf-8
-trim_trailing_whitespace = false
-insert_final_newline = true
