--- a/master/xrefmap.yml
+++ b/master/xrefmap.yml
@@ -4433,6 +4433,32 @@ references:
   isSpec: "True"
   fullName: Gw2Sharp.Mumble.Gw2MumbleClient.Dispose
   nameWithType: Gw2MumbleClient.Dispose
+- uid: Gw2Sharp.Mumble.Gw2MumbleClient.DoesAnyInputHaveFocus
+  name: DoesAnyInputHaveFocus
+  href: api/Gw2Sharp.Mumble.Gw2MumbleClient.html#Gw2Sharp_Mumble_Gw2MumbleClient_DoesAnyInputHaveFocus
+  commentId: P:Gw2Sharp.Mumble.Gw2MumbleClient.DoesAnyInputHaveFocus
+  fullName: Gw2Sharp.Mumble.Gw2MumbleClient.DoesAnyInputHaveFocus
+  nameWithType: Gw2MumbleClient.DoesAnyInputHaveFocus
+- uid: Gw2Sharp.Mumble.Gw2MumbleClient.DoesAnyInputHaveFocus*
+  name: DoesAnyInputHaveFocus
+  href: api/Gw2Sharp.Mumble.Gw2MumbleClient.html#Gw2Sharp_Mumble_Gw2MumbleClient_DoesAnyInputHaveFocus_
+  commentId: Overload:Gw2Sharp.Mumble.Gw2MumbleClient.DoesAnyInputHaveFocus
+  isSpec: "True"
+  fullName: Gw2Sharp.Mumble.Gw2MumbleClient.DoesAnyInputHaveFocus
+  nameWithType: Gw2MumbleClient.DoesAnyInputHaveFocus
+- uid: Gw2Sharp.Mumble.Gw2MumbleClient.DoesGameHaveFocus
+  name: DoesGameHaveFocus
+  href: api/Gw2Sharp.Mumble.Gw2MumbleClient.html#Gw2Sharp_Mumble_Gw2MumbleClient_DoesGameHaveFocus
+  commentId: P:Gw2Sharp.Mumble.Gw2MumbleClient.DoesGameHaveFocus
+  fullName: Gw2Sharp.Mumble.Gw2MumbleClient.DoesGameHaveFocus
+  nameWithType: Gw2MumbleClient.DoesGameHaveFocus
+- uid: Gw2Sharp.Mumble.Gw2MumbleClient.DoesGameHaveFocus*
+  name: DoesGameHaveFocus
+  href: api/Gw2Sharp.Mumble.Gw2MumbleClient.html#Gw2Sharp_Mumble_Gw2MumbleClient_DoesGameHaveFocus_
+  commentId: Overload:Gw2Sharp.Mumble.Gw2MumbleClient.DoesGameHaveFocus
+  isSpec: "True"
+  fullName: Gw2Sharp.Mumble.Gw2MumbleClient.DoesGameHaveFocus
+  nameWithType: Gw2MumbleClient.DoesGameHaveFocus
 - uid: Gw2Sharp.Mumble.Gw2MumbleClient.FieldOfView
   name: FieldOfView
   href: api/Gw2Sharp.Mumble.Gw2MumbleClient.html#Gw2Sharp_Mumble_Gw2MumbleClient_FieldOfView
@@ -4511,6 +4537,19 @@ references:
   isSpec: "True"
   fullName: Gw2Sharp.Mumble.Gw2MumbleClient.IsCompassTopRight
   nameWithType: Gw2MumbleClient.IsCompassTopRight
+- uid: Gw2Sharp.Mumble.Gw2MumbleClient.IsCompetitiveMode
+  name: IsCompetitiveMode
+  href: api/Gw2Sharp.Mumble.Gw2MumbleClient.html#Gw2Sharp_Mumble_Gw2MumbleClient_IsCompetitiveMode
+  commentId: P:Gw2Sharp.Mumble.Gw2MumbleClient.IsCompetitiveMode
+  fullName: Gw2Sharp.Mumble.Gw2MumbleClient.IsCompetitiveMode
+  nameWithType: Gw2MumbleClient.IsCompetitiveMode
+- uid: Gw2Sharp.Mumble.Gw2MumbleClient.IsCompetitiveMode*
+  name: IsCompetitiveMode
+  href: api/Gw2Sharp.Mumble.Gw2MumbleClient.html#Gw2Sharp_Mumble_Gw2MumbleClient_IsCompetitiveMode_
+  commentId: Overload:Gw2Sharp.Mumble.Gw2MumbleClient.IsCompetitiveMode
+  isSpec: "True"
+  fullName: Gw2Sharp.Mumble.Gw2MumbleClient.IsCompetitiveMode
+  nameWithType: Gw2MumbleClient.IsCompetitiveMode
 - uid: Gw2Sharp.Mumble.Gw2MumbleClient.IsMapOpen
   name: IsMapOpen
   href: api/Gw2Sharp.Mumble.Gw2MumbleClient.html#Gw2Sharp_Mumble_Gw2MumbleClient_IsMapOpen
@@ -4855,6 +4894,32 @@ references:
   isSpec: "True"
   fullName: Gw2Sharp.Mumble.IGw2MumbleClient.CompassRotation
   nameWithType: IGw2MumbleClient.CompassRotation
+- uid: Gw2Sharp.Mumble.IGw2MumbleClient.DoesAnyInputHaveFocus
+  name: DoesAnyInputHaveFocus
+  href: api/Gw2Sharp.Mumble.IGw2MumbleClient.html#Gw2Sharp_Mumble_IGw2MumbleClient_DoesAnyInputHaveFocus
+  commentId: P:Gw2Sharp.Mumble.IGw2MumbleClient.DoesAnyInputHaveFocus
+  fullName: Gw2Sharp.Mumble.IGw2MumbleClient.DoesAnyInputHaveFocus
+  nameWithType: IGw2MumbleClient.DoesAnyInputHaveFocus
+- uid: Gw2Sharp.Mumble.IGw2MumbleClient.DoesAnyInputHaveFocus*
+  name: DoesAnyInputHaveFocus
+  href: api/Gw2Sharp.Mumble.IGw2MumbleClient.html#Gw2Sharp_Mumble_IGw2MumbleClient_DoesAnyInputHaveFocus_
+  commentId: Overload:Gw2Sharp.Mumble.IGw2MumbleClient.DoesAnyInputHaveFocus
+  isSpec: "True"
+  fullName: Gw2Sharp.Mumble.IGw2MumbleClient.DoesAnyInputHaveFocus
+  nameWithType: IGw2MumbleClient.DoesAnyInputHaveFocus
+- uid: Gw2Sharp.Mumble.IGw2MumbleClient.DoesGameHaveFocus
+  name: DoesGameHaveFocus
+  href: api/Gw2Sharp.Mumble.IGw2MumbleClient.html#Gw2Sharp_Mumble_IGw2MumbleClient_DoesGameHaveFocus
+  commentId: P:Gw2Sharp.Mumble.IGw2MumbleClient.DoesGameHaveFocus
+  fullName: Gw2Sharp.Mumble.IGw2MumbleClient.DoesGameHaveFocus
+  nameWithType: IGw2MumbleClient.DoesGameHaveFocus
+- uid: Gw2Sharp.Mumble.IGw2MumbleClient.DoesGameHaveFocus*
+  name: DoesGameHaveFocus
+  href: api/Gw2Sharp.Mumble.IGw2MumbleClient.html#Gw2Sharp_Mumble_IGw2MumbleClient_DoesGameHaveFocus_
+  commentId: Overload:Gw2Sharp.Mumble.IGw2MumbleClient.DoesGameHaveFocus
+  isSpec: "True"
+  fullName: Gw2Sharp.Mumble.IGw2MumbleClient.DoesGameHaveFocus
+  nameWithType: IGw2MumbleClient.DoesGameHaveFocus
 - uid: Gw2Sharp.Mumble.IGw2MumbleClient.FieldOfView
   name: FieldOfView
   href: api/Gw2Sharp.Mumble.IGw2MumbleClient.html#Gw2Sharp_Mumble_IGw2MumbleClient_FieldOfView
@@ -4933,6 +4998,19 @@ references:
   isSpec: "True"
   fullName: Gw2Sharp.Mumble.IGw2MumbleClient.IsCompassTopRight
   nameWithType: IGw2MumbleClient.IsCompassTopRight
+- uid: Gw2Sharp.Mumble.IGw2MumbleClient.IsCompetitiveMode
+  name: IsCompetitiveMode
+  href: api/Gw2Sharp.Mumble.IGw2MumbleClient.html#Gw2Sharp_Mumble_IGw2MumbleClient_IsCompetitiveMode
+  commentId: P:Gw2Sharp.Mumble.IGw2MumbleClient.IsCompetitiveMode
+  fullName: Gw2Sharp.Mumble.IGw2MumbleClient.IsCompetitiveMode
+  nameWithType: IGw2MumbleClient.IsCompetitiveMode
+- uid: Gw2Sharp.Mumble.IGw2MumbleClient.IsCompetitiveMode*
+  name: IsCompetitiveMode
+  href: api/Gw2Sharp.Mumble.IGw2MumbleClient.html#Gw2Sharp_Mumble_IGw2MumbleClient_IsCompetitiveMode_
+  commentId: Overload:Gw2Sharp.Mumble.IGw2MumbleClient.IsCompetitiveMode
+  isSpec: "True"
+  fullName: Gw2Sharp.Mumble.IGw2MumbleClient.IsCompetitiveMode
+  nameWithType: IGw2MumbleClient.IsCompetitiveMode
 - uid: Gw2Sharp.Mumble.IGw2MumbleClient.IsMapOpen
   name: IsMapOpen
   href: api/Gw2Sharp.Mumble.IGw2MumbleClient.html#Gw2Sharp_Mumble_IGw2MumbleClient_IsMapOpen
