--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
       fail-fast: false
       matrix:
         dotnet:
-          - "3.1.101"
+          - "3.1.102"
         os:
           - ubuntu-latest
           - windows-latest
@@ -51,7 +51,7 @@ jobs:
       fail-fast: false
       matrix:
         dotnet:
-          - "3.1.101"
+          - "3.1.102"
     steps:
       - uses: actions/checkout@v1
       - uses: actions/download-artifact@v1
@@ -93,10 +93,10 @@ jobs:
       fail-fast: false
       matrix:
         dotnet:
-          - "3.1.101"
+          - "3.1.102"
     steps:
       - uses: actions/checkout@v1
-      - uses: actions/setup-dotnet@v1.0.2 # Explicitly use v1.0.2 because of actions/setup-dotnet#29
+      - uses: actions/setup-dotnet@v1
         name: Install .NET Core ${{ matrix.dotnet }}
         with:
           dotnet-version: ${{ matrix.dotnet }}
