--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -4,18 +4,14 @@ on: [push]
 
 jobs:
   sonarcloud:
-    name: SonarCloud analysis
+    name: Analysis
     runs-on: windows-latest
-    strategy:
-      matrix:
-        dotnet:
-          - "3.1.102"
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
       - uses: actions/setup-dotnet@v1
-        name: Install .NET Core ${{ matrix.dotnet }}
+        name: Install .NET Core 3.1
         with:
-          dotnet-version: ${{ matrix.dotnet }}
+          dotnet-version: "3.1.102"
       - name: Install Coverlet
         run: dotnet tool install --global coverlet.console
       - name: Install SonarScanner
@@ -25,9 +21,15 @@ jobs:
         run: |
           if ($env:GITHUB_REF -match "refs/([^/]*)/(.*)") {
             if ($matches[1] -eq "tags") {
-              dotnet sonarscanner begin /k:"Archomeda_Gw2Sharp" /o:"archomeda-github" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.cs.opencover.reportsPaths="coverage.xml" /v:"$($matches[2])"
+              Write-Output "Using tag $($matches[2])"
+              dotnet sonarscanner begin /k:"Archomeda_Gw2Sharp" /o:"archomeda-github" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.cs.opencover.reportsPaths="coverage.xml" /d:sonar.branch.name=master /v:"$($matches[2])"
             } elseif ($matches[1] -eq "heads") {
-              dotnet sonarscanner begin /k:"Archomeda_Gw2Sharp" /o:"archomeda-github" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.cs.opencover.reportsPaths="coverage.xml" /d:sonar.branch.name="$($matches[2])"
+              Write-Output "Using branch $($matches[2])"
+              if ($matches[2] -eq "master") {
+                dotnet sonarscanner begin /k:"Archomeda_Gw2Sharp" /o:"archomeda-github" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.cs.opencover.reportsPaths="coverage.xml" /d:sonar.branch.name="$($matches[2])" /v:master
+              } else {
+                dotnet sonarscanner begin /k:"Archomeda_Gw2Sharp" /o:"archomeda-github" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.cs.opencover.reportsPaths="coverage.xml" /d:sonar.branch.name="$($matches[2])"
+              }
             } else {
               Write-Error "No valid ref found in $env:GITHUB_REF"
               exit 1
@@ -41,7 +43,7 @@ jobs:
       - name: Run dotnet build
         run: dotnet build -c Debug
       - name: Run Coverlet
-        run: coverlet Gw2Sharp.Tests/bin/Debug/netcoreapp3.0/Gw2Sharp.Tests.dll --target "dotnet.exe" --targetargs "test -c Debug --no-build" --format opencover --output "coverage.xml"
+        run: coverlet Gw2Sharp.Tests/bin/Debug/netcoreapp3.1/Gw2Sharp.Tests.dll --target "dotnet.exe" --targetargs "test -c Debug --no-build" --format opencover --output "coverage.xml"
       - name: End SonarScanner
         run: dotnet sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
         env:
