--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -3,24 +3,21 @@ name: PR
 on: [pull_request]
 
 jobs:
-  # Unit tests
   test:
     name: Test
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
-        dotnet:
-          - "3.1.102"
         os:
           - ubuntu-latest
           - windows-latest
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
       - uses: actions/setup-dotnet@v1
-        name: Install .NET Core ${{ matrix.dotnet }}
+        name: Install .NET Core 3.1
         with:
-          dotnet-version: ${{ matrix.dotnet }}
+          dotnet-version: "3.1.102"
       - name: Run dotnet build
         run: dotnet build Gw2Sharp -c Release
       - name: Run dotnet test
